# filescale-gRPC

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  build.rs  compose.yml  go.mod
.github/workflows/: release.yml  validate.yml
proto/filescale/v1/: filescale.proto
src/: lib.rs
