[package]
name = "filescale-grpc"
version = "0.1.0"
edition = "2024"
description = "gRPC protocol definitions for Filescale distributed filesystem monitoring"
license = "MIT"
repository = "https://github.com/Filescale/filescale-gRPC"
readme = "README.md"
keywords = ["grpc", "protobuf", "filesystem", "monitoring"]
categories = ["network-programming", "api-bindings"]

[dependencies]
prost = "0.13"
tonic = "0.12"
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "filescale_grpc"
path = "src/lib.rs"
